--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,21 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
         android:layout_height="match_parent">
+    <!-- Toolbar -->
+    <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
+    </androidx.appcompat.widget.Toolbar>
     <!-- 侧边菜单 -->
+
+
+    <!-- 固定在底部的按钮 -->
     <androidx.drawerlayout.widget.DrawerLayout
             android:id="@+id/drawer_layout"
             android:layout_width="match_parent"
@@ -13,10 +26,9 @@
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
+                android:layout_marginTop="10mm"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
-
-
 
 
         <!-- 侧边菜单 -->
@@ -32,8 +44,6 @@
                 android:background="#ADD8E6"/>
 
     </androidx.drawerlayout.widget.DrawerLayout>
-
-    <!-- 固定在底部的按钮 -->
     <Button
             android:id="@+id/btn_pick_file"
             android:layout_width="wrap_content"
@@ -41,5 +51,15 @@
             android:layout_gravity="bottom|center_horizontal"
             android:layout_margin="16dp"
             android:text="Pick File"/>
+    <Button
+            android:text="选择月份"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:layout_anchorGravity="end|bottom"
+            app:layout_anchor="@+id/drawer_layout" android:id="@+id/button_select_month_year"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="146dp"
+            android:layout_height="68dp" app:layout_anchorGravity="start|bottom"
+            app:layout_anchor="@+id/drawer_layout" android:id="@+id/textView6"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
