--- a/app/src/main/res/layout/add_item.xml
+++ b/app/src/main/res/layout/add_item.xml
@@ -13,6 +13,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
+
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -24,12 +25,57 @@
                 android:layout_margin="10dp"
                 android:layout_weight="1">
         </TextView>
+
     </androidx.appcompat.widget.Toolbar>
     <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:id="@+id/tableRow">
 
+
     </TableRow>
+    <TextView
+            android:text="商品"
+            android:textSize="30dp"
+            android:layout_marginTop="10mm"
+            android:layout_width="92dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView7"/>
+    <EditText
+            android:textSize="18dp"
+            android:layout_marginTop="10mm"
+            android:layout_width="306dp"
+            android:layout_marginLeft="10mm"
+            android:layout_height="wrap_content"
+            android:id="@+id/editView7"/>
+
+    <TextView
+            android:text="价格"
+            android:textSize="30dp"
+            android:layout_marginTop="15mm"
+            android:layout_width="92dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView8"/>
+    <EditText
+            android:textSize="18dp"
+            android:layout_marginTop="15mm"
+            android:layout_marginLeft="10mm"
+            android:layout_width="306dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/editView8"/>
+    <TextView
+            android:text="种类"
+            android:textSize="30dp"
+            android:layout_marginTop="20mm"
+            android:layout_width="92dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView9"/>
+    <EditText
+            android:textSize="18dp"
+            android:id="@+id/editView9"
+            android:layout_marginTop="20mm"
+            android:layout_marginLeft="10mm"
+            android:layout_width="306dp"
+            android:layout_height="wrap_content"/>
     <Button
             android:id="@+id/btn_pick_file"
             android:layout_width="wrap_content"
