--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,8 @@
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
-                android:layout_marginTop="10mm"
-                android:paddingBottom="10mm"
+                android:layout_marginTop="15mm"
+                android:paddingBottom="15mm"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
@@ -67,5 +67,12 @@
             android:textColor="@color/white"
             android:layout_height="63dp" app:layout_anchorGravity="end|top" app:layout_anchor="@+id/toolbar"
             android:id="@+id/textView2"/>
+    <TextView
+            android:text="AstralSta"
+            android:textSize="30dp"
+            android:textColor="#8BC34A"
+            android:layout_width="140dp"
+            android:layout_height="48dp" app:layout_anchorGravity="start|top" app:layout_anchor="@+id/toolbar"
+            android:id="@+id/textView10"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
