--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,36 +31,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
-
-        <!-- 侧边菜单 -->
-        <ListView
-                android:id="@+id/navigation_drawer"
-                android:layout_width="240dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="start"
-                android:choiceMode="singleChoice"
-                android:divider="@android:color/transparent"
-                android:dividerHeight="0dp"
-                android:padding="16dp"
-                android:background="#ADD8E6"/>
-
     </androidx.drawerlayout.widget.DrawerLayout>
 
     <Button
-            android:text="选择月份"
+            android:id="@+id/button_toggle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:layout_anchorGravity="end|bottom"
-            app:layout_anchor="@+id/drawer_layout" android:id="@+id/button_select_month_year"/>
+            android:layout_height="wrap_content"
+            android:text="···"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="16dp" app:layout_anchorGravity="end|bottom" app:layout_anchor="@+id/drawer_layout"/>
     <TextView
             android:text="TextView"
-            android:layout_width="146dp"
+            android:layout_width="302dp"
             android:layout_height="68dp" app:layout_anchorGravity="start|bottom"
             app:layout_anchor="@+id/drawer_layout" android:id="@+id/textView6"/>
-    <Button
-            android:text="添加数据"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:layout_anchorGravity="bottom|center"
-            app:layout_anchor="@+id/drawer_layout" android:id="@+id/button"/>
     <TextView
             android:text="TextView"
             android:layout_width="177dp"
@@ -74,5 +59,38 @@
             android:layout_width="140dp"
             android:layout_height="48dp" app:layout_anchorGravity="start|top" app:layout_anchor="@+id/toolbar"
             android:id="@+id/textView10"/>
+    <Button
+            android:id="@+id/button_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="每日流水"
+            app:layout_anchorGravity="right|bottom"
+            android:layout_marginBottom="35mm"
+            app:layout_anchor="@+id/drawer_layout"
+            android:layout_above="@id/button_toggle"
+            android:visibility="gone" />
+    <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_anchorGravity="right|bottom"
+            app:layout_anchor="@+id/drawer_layout"
+            android:layout_marginBottom="15mm"
+            android:text="添加数据"
 
+            android:layout_above="@id/button_toggle"
+            android:visibility="gone" />
+    <Button
+            android:text="选择月份"
+            app:layout_anchorGravity="right|bottom"
+            android:layout_marginBottom="25mm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_anchor="@+id/drawer_layout" android:id="@+id/button_select_month_year"/>
+    <Button
+            android:text="HOME"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:layout_anchorGravity="bottom|center"
+            app:layout_anchor="@+id/drawer_layout" android:id="@+id/button2"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
