--- a/app/src/main/res/layout/item2.xml
+++ b/app/src/main/res/layout/item2.xml
@@ -21,7 +21,7 @@
 
         <Switch
                 android:text="支出"
-                android:layout_marginTop="10mm"
+                android:layout_marginTop="70mm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/switch2"/>
     </TableRow>
@@ -79,6 +79,11 @@
     <Button
             android:text="保存修改"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:layout_anchorGravity="end|bottom"
+            android:layout_height="wrap_content" app:layout_anchorGravity="bottom|center"
             app:layout_anchor="@+id/tableRow2" android:id="@+id/change"/>
+    <Button
+            android:text="删除"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/button4" app:layout_anchorGravity="end|bottom"
+            app:layout_anchor="@+id/tableRow2"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
