--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="color_red">#E91E63</color>
     <color name="color_blue">#4CAF50</color>
+    <color name="color_green">#6FF436</color>
 </resources>
