--- a/app/src/main/res/layout/activity_item_worker.xml
+++ b/app/src/main/res/layout/activity_item_worker.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-              xmlns:tools="http://schemas.android.com/tools"
+              xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
               android:id="@+id/LinearLayout1"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -14,7 +14,7 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#5B5E60"
+            android:background="#303335"
             android:orientation="horizontal">
         <TextView android:layout_width="match_parent" android:layout_height="10mm"
                   android:text="AstralSta"
@@ -28,21 +28,93 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
         <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="16mm"
                 android:layout_height="666dp"
                 android:layout_weight="1"
                 android:background="#5B5E60"
-                android:text="红色"/>
+                android:textSize="5dp"
+                android:textColor="@color/white"/>
 
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="5"
-                android:background="#000000"
-                android:text="绿色"/>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:orientation="vertical"
+                >
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="20dp">
+                <androidx.cardview.widget.CardView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:cardCornerRadius="5dp"
+                        app:cardElevation="0dp"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
 
+                        app:cardBackgroundColor="#FAEFCFEF"
+                >
+
+                    <TextView
+                            android:layout_width="115dp"
+                            android:layout_height="50dp"
+                            android:gravity="center"
+                            android:id="@+id/yusuan"
+                            android:text="预算"/>
+                    <!--  android:layout_gravity="center"  让整个容器居中  -->
+
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:cardCornerRadius="5dp"
+                        app:cardElevation="0dp"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        app:cardBackgroundColor="#FACDA8CD"
+                >
+
+                    <TextView
+                            android:layout_width="115dp"
+                            android:layout_height="50dp"
+                            android:gravity="center"
+                            android:text="Hello World!"/>
+                    <!--  android:layout_gravity="center"  让整个容器居中  -->
+
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="20dp">
+                <androidx.cardview.widget.CardView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:cardCornerRadius="5dp"
+                        app:cardElevation="0dp"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+
+                        app:cardBackgroundColor="#FAEFCFEF"
+                >
+
+                    <TextView
+                            android:layout_width="115dp"
+                            android:layout_height="50dp"
+                            android:gravity="center"
+                            android:id="@+id/backButton"
+                            android:text="返回"/>
+                    <!--  android:layout_gravity="center"  让整个容器居中  -->
+
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
