--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,6 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.AstralSta" parent="Base.Theme.AstralSta"/>
+    <style name="Theme.AstralSta" parent="Theme.AppCompat.Light.NoActionBar">           <!-- 其他自定义样式 -->
+</style>
 </resources>
